--- a/index.html
+++ b/index.html
@@ -5,26 +5,30 @@
 	<meta charset="utf-8" />
 	<title>Webpack App</title>
 	<script src="dist/main.js"></script>
+	<script src="dist/bundle.js"></script>
 </head>
 
 <body>
 	<h1>Hello world!</h1>
 	<h2>Tip: Check your console</h2>
+	<div id="container"></div>
 	<script>
-		if ("serviceWorker" in navigator) {
-			window.addEventListener("load", () => {
-				navigator.serviceWorker
-					.register("/sw.js")
-					.then(registration => {
-						console.log("SW registered: ", registration);
-					})
-					.catch(registrationError => {
-						console.log("SW registration failed: ", registrationError);
-					});
-			});
-		}
+		console.log(theograms)
+		theograms.renderTheograms("container")
+		// if ("serviceWorker" in navigator) {
+		// 	window.addEventListener("load", () => {
+		// 		navigator.serviceWorker
+		// 			.register("/sw.js")
+		// 			.then(registration => {
+		// 				console.log("SW registered: ", registration);
+		// 			})
+		// 			.catch(registrationError => {
+		// 				console.log("SW registration failed: ", registrationError);
+		// 			});
+		// 	});
+		// }
 	</script>
-	<script src="dist/bundle.js"></script>
+	
 </body>
 
 </html>
